Fixed spacing

--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@
 
 body 
 {
-    background-image: url("../images/Background.jpg");
+    background-image: url("images/Background.jpg");
 	  background-repeat: no-repeat;
     font-family: 'Domine', serif;
     background-size: cover;
